--- a/The_Sakila_Database_Analysis.ipynb
+++ b/The_Sakila_Database_Analysis.ipynb
@@ -490,10 +490,9 @@
     }
    ],
    "source": [
-    "# Let's now do some Exploratory Analysis of the df DataFrame. Please note that the following questions\n",
-    "# were designed solely to demonstrate proficiency in exploratory data analysis in Python.\n",
+    "# Let's now do the requested Exploratory Analysis of the df DataFrame.\n",
     "\n",
-    "# Question #1. What's the mean of rental duration for all films, rounded to two decimals?\n",
+    "# Question #1. What is the mean of rental duration for all films?\n",
     "\n",
     "round(df['film_rental_duration'].mean(),2)\n",
     "\n",
@@ -530,7 +529,7 @@
     }
    ],
    "source": [
-    "# Question #2. What's the most common rental duration? Plot the results.\n",
+    "# Question #2. What is the most common rental duration?\n",
     "\n",
     "df['film_rental_duration'].value_counts()\n",
     "df['film_rental_duration'].value_counts().plot(kind= 'bar', figsize=(14,6))\n",
@@ -566,7 +565,7 @@
     }
    ],
    "source": [
-    "# Question #3. What is the most common rental rate? Plot the results.\n",
+    "# Question #3. What is the most common rental rate?\n",
     "\n",
     "df['film_rental_rate'].value_counts()\n",
     "df['film_rental_rate'].value_counts().plot(kind= 'pie', figsize=(6,6))\n",
@@ -641,7 +640,7 @@
     }
    ],
    "source": [
-    "# Question #5. How many films of each rating does the store have? Plot the results.\n",
+    "# Question #5. How many films of each rating does the store have?\n",
     "\n",
     "df['film_rating'].value_counts()\n",
     "df['film_rating'].value_counts().plot(kind= 'bar', figsize=(14,6))\n",
@@ -712,7 +711,7 @@
     }
    ],
    "source": [
-    "# Question #7. Add a new calculated column to show the rental days. I will use a lambda function to do so.\n",
+    "# Question #7. Give us the rental period in days.\n",
     "\n",
     "df['rental_days'] = df[['rental_date','return_date']].apply (lambda x: (x[1]-x[0]).days, axis=1)\n",
     "df['rental_days'].head()"
@@ -748,7 +747,7 @@
     }
    ],
    "source": [
-    "# Question #8. How are the rental_days distributed?\n",
+    "# Question #8. How are the rental days distributed?\n",
     "\n",
     "ax = df['rental_days'].plot(kind= 'density', figsize=(14,6))\n",
     "ax.axvline(df['rental_days'].mean(), color = 'red')\n"
@@ -804,7 +803,7 @@
     }
    ],
    "source": [
-    "# Question #10. List the 5 films with the lowest daily rental rate.\n",
+    "# Question #10. What are the titles of the 5 films with the lowest daily rental rate?\n",
     "\n",
     "lowest = df.loc[df['daily_rental_rate'] == df['daily_rental_rate'].min()].head(5)\n",
     "print(lowest['film_title'])\n",
@@ -832,7 +831,7 @@
     }
    ],
    "source": [
-    "# Question #11. List the 3 films with the highest daily rental rate.\n",
+    "# Question #11. What are the titles of the 3 films with the highest daily rental rate?\n",
     "\n",
     "highest = df.loc[df['daily_rental_rate'] == df['daily_rental_rate'].max()].head(3)\n",
     "print(highest['film_title'])\n",
